--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
 }
 
@@ -50,6 +51,20 @@ dependencies {
     def lifecycle_version = "2.6.0-alpha01"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    //for room
+    def room_version = "2.4.3"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    //room compiler
+    kapt "androidx.room:room-compiler:$room_version"
+
+    //for recycler view
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    //for card view
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     //navigation
     def nav_version = "2.5.1"
